Save details menu and statusBar state in preferences, fix javafx warnings and update plugins