@@ -1,9 +1,11 @@
+import sun.jvmstat.monitor.MonitoredVmUtil.jvmArgs
+
 plugins {
     java
     application
-    id("org.javamodularity.moduleplugin") version "1.8.12"
-    id("org.openjfx.javafxplugin") version "0.0.13"
-    id("org.beryx.jlink") version "3.0.1"
+    id("org.javamodularity.moduleplugin") version "2.0.0"
+    id("org.openjfx.javafxplugin") version "0.1.0"
+    id("org.beryx.jlink") version "3.1.5"
     id("io.freefair.lombok") version "8.14"
 }
 
@@ -32,7 +34,7 @@ application {
 }
 
 javafx {
-    version = "24"
+    version = "25"
     modules = listOf("javafx.controls", "javafx.fxml")
 }
 
@@ -53,6 +55,10 @@ tasks.processResources {
     filesMatching("application.properties") {
         expand(project.properties)
     }
+}
+
+tasks.run {
+    jvmArgs = listOf("--enable-native-access=javafx.graphics")
 }
 
 jlink {
